# erms-create

./: README.md  erms.py  erms_aggregation.py  erms_record.py  funcs.py  pyproject.toml
erms_create/: erms.py  erms_aggregation.py  erms_control.py  erms_dates.py  erms_elements.py  erms_record.py  erms_restriction.py  erms_value_lists.py  funcs.py  ns.py
src/erms_create/: __init__.py
src/erms_create/core/: __init__.py  aggregation.py  control.py  elements.py  erms.py  namespaces.py  record.py  utils.py  value_lists.py
src/erms_create/svk_arende/: __init__.py  svk_case.py  svk_erms.py  svk_extensions.py  svk_record.py  validation.py  value_lists.py
tests/: test_grundstruktur.py
