[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "erms-create"
version = "1.0.0"
description = "Python library for creating ERMS XML documents according to Church of Sweden specifications"
authors = [
    {name = "Henrik Vitalis", email = "your-email@example.com"}
]
dependencies = [
    "lxml>=4.9.0",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: XML",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["erms", "xml", "archival", "svenska-kyrkan", "records-management"]

[project.urls]
Homepage = "https://github.com/svkau/erms-create"
Repository = "https://github.com/svkau/erms-create"
Documentation = "https://github.com/svkau/erms-create/blob/main/README.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "types-lxml",
]
validation = [
    "lxml[html_clean]>=4.9.0",  # För Schematron-validering
]

[project.scripts]
erms-create = "erms_create.cli:main"
erms-validate = "erms_create.validation:main"

[tool.hatch.build.targets.wheel]
packages = ["src/erms_create"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--cov=erms_create",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--import-mode=importlib"  # Lägg till denna rad
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["erms_create"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "lxml.*"
ignore_missing_imports = true
